--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^9.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-owl-carousel": "^2.3.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
     "uid": "^2.0.1",
