--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.2",
     "emailjs": "^4.0.1",
+    "express": "^4.18.2",
     "firebase": "^9.16.0",
     "fs": "^0.0.1-security",
+    "nodemailer": "^6.9.1",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
     "react-ga4": "^2.0.0",
+    "react-mailchimp-subscribe": "^2.1.3",
     "react-owl-carousel": "^2.3.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
